package net.iterart.unicobros;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class UnicobrosApplication {

	public static void main(String[] args) {
		SpringApplication.run(UnicobrosApplication.class, args);
	}

}
